--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ pipeline:
     #- docker_username
     #- docker_password
   deploy2nightly:
-    image: jackthestripper/drone_k8s_rollout:20180510
+    image: jackthestripper/drone_k8s_rollout:20180510-0
     debug: true
     user: $${K8S_NIGHTLY_USER}
     token: $${K8S_NIGHTLY_TOKEN}
