--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "debezium"]
 	path = debezium
 	url = https://github.com/debezium/debezium
+[submodule "kafka-elastic-sink-connector"]
+	path = kafka-elastic-sink-connector
+	url = https://github.com/sansare/kafka-elastic-sink-connector
