--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
   image: maven:3.8.4
   commands:
     - cd kafka-elastic-sink-connector && mvn clean package && cd ..
-    - cd debezium && mvn clean package -DskipTests=true && cd ..
+#    - cd debezium && mvn clean package -DskipTests=true && cd ..
   when:
     event:
       - push
