--- a/.drone.yml
+++ b/.drone.yml
@@ -69,7 +69,7 @@ steps:
     TOKEN:
       from_secret: GOOGLE_CREDENTIALS
   settings:
-    cluster: sansar-cluster
+    cluster: sansar-prod
     expand_env_vars: true
     template: k8s/k8s.yaml
     namespace: default
@@ -92,7 +92,7 @@ steps:
     TOKEN:
       from_secret: GOOGLE_CREDENTIALS
   settings:
-    cluster: sansar-cluster
+    cluster: sansar-prod
     expand_env_vars: true
     template: k8s/k8s.yaml
     namespace: default
@@ -113,7 +113,7 @@ steps:
     TOKEN:
       from_secret: GOOGLE_CREDENTIALS
   settings:
-    cluster: sansar-cluster
+    cluster: sansar-prod
     expand_env_vars: true
     template: k8s/k8s.yaml
     namespace: default
