--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = master
 [submodule "debezium"]
 	path = debezium
-	url = https://github.com/sansare/kafka-elastic-sink-connector.git
+	url = https://github.com/debezium/debezium.git
 	branch = main
