--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ steps:
   image: maven:3.9.7
   commands:
     - cd kafka-elastic-sink-connector && mvn clean package && cd ..
-    #- cd debezium && mvn clean package -DskipTests=true && cd ..
+    - cd debezium && mvn clean package -DskipTests=true && cd ..
   when:
     event:
       - push
