--- a/.drone.yml
+++ b/.drone.yml
@@ -13,15 +13,15 @@ steps:
 - name: submodules
   image: alpine/git
   commands:
-    - git submodule init
-    - git submodule update --recursive --remote
+  - git submodule init
+  - git submodule update --recursive --remote
 
 # Build
 - name: build
   image: maven:3.9.7
   commands:
     - cd kafka-elastic-sink-connector && mvn clean package && cd ..
-    - cd debezium && mvn clean package -DskipTests=true && cd ..
+#    - cd debezium && mvn clean package -DskipTests=true && cd ..
   when:
     event:
       - push
