--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -43,11 +43,11 @@ spec:
           - name: CONNECT_KEY_CONVERTER
             value: org.apache.kafka.connect.storage.StringConverter
           - name: CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL
-            value: 'http://schema-registry:8081'
+            value: http://schema-registry:8081
           - name: CONNECT_VALUE_CONVERTER
             value: org.apache.kafka.connect.json.JsonConverter
           - name: CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL
-            value: 'http://schema-registry:8081'
+            value: http://schema-registry:8081
           - name: CONNECT_INTERNAL_KEY_CONVERTER
             value: "org.apache.kafka.connect.json.JsonConverter"
           - name: CONNECT_INTERNAL_VALUE_CONVERTER
@@ -67,7 +67,7 @@ spec:
           - name: CONNECT_PLUGIN_PATH
             value: /etc/kafka-connect/plugins
           - name: ES_URL
-            value: "http://stores-es:9200"
+            value: http://stores-es:9200
         resources: {}
       restartPolicy: Always
 ---
