kafka-connect config in k8s

--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -29,35 +29,33 @@ spec:
         - containerPort: 8083
         env:
           - name: CONNECT_BOOTSTRAP_SERVERS
-            value: "broker:9092"
-          - name: CONNECT_REST_PORT
-            value: "8083"
+            value: "localhost:9092"
           - name: CONNECT_GROUP_ID
-            value: compose-connect-group
+            value: connector-elastic
           - name: CONNECT_CONFIG_STORAGE_TOPIC
-            value: docker-connect-configs
+            value: connect-configs-logger
           - name: CONNECT_OFFSET_STORAGE_TOPIC
-            value: docker-connect-offsets
+            value: connect-offsets-logger
           - name: CONNECT_STATUS_STORAGE_TOPIC
-            value: docker-connect-status
+            value: connect-status-logger
           - name: CONNECT_KEY_CONVERTER
             value: org.apache.kafka.connect.storage.StringConverter
           - name: CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL
             value: http://schema-registry:8081
           - name: CONNECT_VALUE_CONVERTER
             value: org.apache.kafka.connect.json.JsonConverter
-          - name: CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL
-            value: http://schema-registry:8081
           - name: CONNECT_INTERNAL_KEY_CONVERTER
-            value: "org.apache.kafka.connect.json.JsonConverter"
+            value: org.apache.kafka.connect.json.JsonConverter
           - name: CONNECT_INTERNAL_VALUE_CONVERTER
-            value: "org.apache.kafka.connect.json.JsonConverter"
+            value: org.apache.kafka.connect.json.JsonConverter
           - name: CONNECT_REST_ADVERTISED_HOST_NAME
             value: "kafka-connect"
           - name: CONNECT_LOG4J_ROOT_LOGLEVEL
-            value: "INFO"
+            value: INFO
           - name: CONNECT_LOG4J_LOGGERS
             value: "org.apache.kafka.connect.runtime.rest=WARN,org.reflections=ERROR,io.debezium=INFO,org.skynyrd=DEBUG"
+          - name: KAFKA_HEAP_OPTS
+            value: "-Xms500M -Xmx800M"
           - name: CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR
             value: "1"
           - name: CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR
