kafka-connect config in k8s

--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -67,6 +67,7 @@ spec:
           - name: ES_URL
             value: http://stores-es:9200
         resources: {}
+      hostname: kafka-connect
       restartPolicy: Always
 ---
 apiVersion: v1
